# termicode

./: .env.example  .gitignore  AGENTS.md  README.md  pre_commit_hook.py  pyproject.toml
termicode/: cli.py  command_tools.py  doctor.py  file_tools.py  health_tools.py  ignore.py  models.py  path_safety.py  project.py  prompts.py  report.py  rules.py  search_tools.py  session.py  startup.py  tool_executor.py  tools.py  ui.py
tests/: conftest.py  test_product_features.py  test_safety_tools.py
