[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termicode-ai"
version = "0.1.2"
description = "OpenRouter-powered AI coding assistant with streaming responses, cost tracking, and zero-configuration setup"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Parth Pathak"}
]
keywords = ["ai", "coding-assistant", "openrouter", "llama", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "ddgs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
termicode = "termicode.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/termicode"
Repository = "https://github.com/yourusername/termicode"
Issues = "https://github.com/yourusername/termicode/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["termicode*"]

[tool.setuptools.package-data]
termicode = ["*.md"]
